fix: align images single post

--- a/scss/_labomba.scss
+++ b/scss/_labomba.scss
@@ -671,8 +671,7 @@ a {
 
     figure {
       text-align: center;
-      margin-top: 3em;
-      margin-bottom: 3em;
+      margin: 3em auto;
 
       figcaption {
         font-size: rem(14);
